--- a/utilities/scss/main.css
+++ b/utilities/scss/main.css
@@ -9679,7 +9679,7 @@ textarea::-webkit-scrollbar-thumb {
 }
 
 .carousel-caption {
-  top: 100px;
+  top: 10%;
   text-align: left;
   left: 10%;
   right: 10%;
@@ -9955,6 +9955,10 @@ textarea {
   border-color: 1px solid transparent;
   outline: none;
   white-space: nowrap;
+}
+
+.mb-icon {
+  display: none;
 }
 
 .navbar-collapse {
@@ -10332,19 +10336,8 @@ td.btn-collapse {
     font-weight: 400;
     font-size: 14px;
   }
-
-  .tbl-mobile td.td-header.expand:after {
-    content: "";
-    background: #fff;
-    color: inherit;
-  }
-
-  .tbl-mobile td.td-header:after {
-    font-family: FontAwesome;
-    content: "";
-    margin-left: 10px;
-    color: inherit;
-    float: right;
+  .tbl-mobile td.td-header .col-11 {
+    padding: 0px;
   }
 
   .tbl-mobile tr td {
@@ -10361,7 +10354,7 @@ td.btn-collapse {
   }
 
   .tbl-mobile tr td.td-header {
-    display: block;
+    display: flex;
   }
 
   .action-btn, .active-lbl, .inactive-lbl {
@@ -10370,6 +10363,10 @@ td.btn-collapse {
 
   .action-btn button, .btn-collapse {
     width: 100% !important;
+  }
+
+  .mb-icon {
+    display: block;
   }
 }
 
